--- a/src/App.css
+++ b/src/App.css
@@ -1,87 +1,159 @@
 .App{
   min-height: 100vh;
-  background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
-  user-select: none;
-  overflow-x: hidden;
+  max-width: 100%;
+  background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);  overflow-x: hidden;
+  scroll-behavior: smooth;
+  transition: 0.5s;
 }
 .appname{
   width: 100%;
-  color: rgb(74, 51, 80);
+  color:rgba(212, 212, 212, 0.664);
   transition: 1s;
   box-shadow: 0px 5px 5px black;
   display: block;
-  padding:5px;
+  margin: 0 auto;
+  padding:10px 0;
   font-size: 50px;
+  background: rgba(68, 122, 172, 0.733);
+  backdrop-filter: blur(10px);
+  cursor: pointer;
+}
+.appname:hover{
+  color: rgba(255,255,255,1);
+}
+span{
+  color: black;
+}
+a{
+  text-decoration: none;
+
 }
 .header{
-  position: relative;
+  top: 0;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+  height: 0;
 }
 .fh1{
-  color: rgb(129, 41, 6);
+  color:rgba(13, 11, 14, 0.493);
   transition: 1s;
   display: inline;
   width: auto;
   position: absolute;
-  top: 0;
+  top: 20px;
   left: 10px;
+  user-select: none;
+  user-zoom: none;
 }
 .fh1:hover{
-  color: rgb(92, 89, 89);
+  color: rgb(0, 0, 0);
 }
 
 .search-form{
-  min-height: 10vh;
+  min-height:6vh;
+  width: 50%;
+  position: fixed;
+  right: 5px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: right;
+  align-items:center;
+  z-index: 100;
 }
 .search-bar{
   width: 50%;
   border: none;
   padding: 10px;
   transition: 0.4s;
-  background-color: #fff;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.5);
 }
 .search-bar:focus{
   box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1);
+  background: rgba(255,255,255,0.5);
+  outline: none;
+  border: none;
 }
 .search-button{
-  background: lightcoral;
+  background: transparent;
   border: none;
-  padding: 10px 20px;
+  padding:0;
+  width: auto;
+  font-size: 30px;
   color:white;
   transition: 0.5s;
+  margin-left: 5px;
+  transition: 0.3s;
+  transform: scale(1);
 }
 .search-button:hover{
-  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1);
+  transform: scale(1.1);
 }
 .recipes{
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
   font-size: 20px;
+  margin-top: 13%;
 }
 
 @media(max-width:700px){
   .fh1{
-    position: relative;
-    display: block;
-    width: 100%;
-    text-align: center;
+   display: none;
   }
   .appname{
     width: 100%;
-    color: rgb(74, 51, 80);
+    color:rgba(212, 212, 212, 0.664);
     transition: 1s;
     box-shadow: 0px 5px 5px black;
     display: block;
     padding:5px;
     font-size: 30px;
   }
+ 
+.header{
+  top: 0;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+  height: 0;
+}
+  .search-form{
+    min-height: 0;
+    width: 100%;
+    margin: 15% auto;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    z-index: 100;
+  }
+  .search-bar{
+    width: 60%;
+    border: none;
+    padding: 7px;
+    transition: 0.4s;
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.5);
+  }
+  .search-button{
+    background: transparent;
+    border: none;
+    padding:0;
+    width: auto;
+    font-size: 25px;
+    color:white;
+    transition: 0.5s;
+    margin-left: 5px;
+    transition: 0.3s;
+    transform: scale(1);
+  }
   .recipes{
     display: flex;
-    justify-content: space-around;
+    justify-content:space-between;
+    height: 50px;
     flex-wrap: wrap;
-    font-size: 13px;
+    font-size: 20px;
+    margin-top: 0 auto;
   }
 }
