--- a/src/recipe.module.css
+++ b/src/recipe.module.css
@@ -5,48 +5,67 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    background: white;
+    background: linear-gradient(rgba(255, 255, 255, 0.548),rgba(255, 255, 255, 0.178));
     align-items: center;
     min-width: 35%;
     transition: 0.3s;
     transform: scale(1);
     cursor: pointer;
-    padding: 15px 30px;
+    padding: 5px 5px;
 }
 .recipe:hover{
     box-shadow: 0px 0px 30px 20px rgba(0, 0, 0, 0.2);
-    transform: scale(1.1);
+    transform: scale(1.03);
+    background: linear-gradient(rgba(255, 255, 255, 0.829),rgba(255, 255, 255, 0.418));
   }
 .image{
     border-radius: 50%;
     width: 200px;
     height: 200px;
-    filter: drop-shadow(5px black);
+    border: 5px solid rgba(0, 0, 0, 0.315);
 }
 @media(max-width:700px){
     .recipe{
         border-radius: 10px;
         box-shadow: 0px 5px 20px rgba(5, 5, 5, 0.637);
-        margin: 10px;
+        margin: 25px;
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
-        background: white;
+        justify-content: space-between;
+        background: linear-gradient(rgba(255, 255, 255, 0.548),rgba(255, 255, 255, 0.178));
         align-items: center;
         min-width: 45%;
         transition: 0.3s;
         transform: scale(1);
         cursor: pointer;
-        padding: 10px 20px;
+        padding: 1px 5px;
+        margin: 10px 60px ;
+        z-index: 99;
     }
     .recipe:hover{
         box-shadow: 0px 0px 30px 20px rgba(0, 0, 0, 0.2);
-        transform: scale(1.1);
+        transform: scale(1);
+        background: linear-gradient(rgba(255, 255, 255, 0.829),rgba(255, 255, 255, 0.418));
+      }
+      h1{
+          font-size: 23px;
+      }
+      h3{
+          font-size: 20px;
+      }
+      li{
+          font-size: 17px;
+      }
+      p{
+          font-size: 17px;
+          text-align: left;
       }
     .image{
         border-radius: 50%;
-        width: 200px;
-        height: 200px;
-        filter: drop-shadow(5px black);
+        width: 70px;
+        height: 70px;
+        margin: 0;
+        border: 2px solid rgba(0, 0, 0, 0.315);
+
     }
 }
