--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,8 @@ a{
     display: block;
     padding:5px;
     font-size: 30px;
+    background: rgba(1, 132, 255, 0.6);
+
   }
  
 .header{
@@ -126,7 +128,7 @@ a{
     display: flex;
     justify-content: center;
     align-items:center;
-    z-index: 100;
+    z-index: -1;
   }
   .search-bar{
     width: 60%;
