--- a/src/App.css
+++ b/src/App.css
@@ -35,24 +35,11 @@ a{
   z-index: 100;
   height: 0;
 }
-.fh1{
-  color:rgba(13, 11, 14, 0.493);
-  transition: 1s;
-  display: inline;
-  width: auto;
-  position: absolute;
-  top: 20px;
-  left: 10px;
-  user-select: none;
-  user-zoom: none;
-}
-.fh1:hover{
-  color: rgb(0, 0, 0);
-}
+
 
 .search-form{
   min-height:6vh;
-  width: 50%;
+  width: 40%;
   position: fixed;
   right: 5px;
   display: flex;
@@ -65,7 +52,7 @@ a{
   border: none;
   padding: 10px;
   transition: 0.4s;
-  border-radius: 10px;
+  border-radius: 50px;
   background: rgba(0, 0, 0, 0.5);
 }
 .search-bar:focus{
@@ -89,41 +76,58 @@ a{
 .search-button:hover{
   transform: scale(1.1);
 }
-.recipes{
+/* .recipes{
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
   font-size: 20px;
   margin-top: 13%;
+} */
+.recipes{
+  display: grid;
+  margin-top:8%;
+  grid-template-columns: 50% 50%;
+  align-items: baseline;
+  cursor: pointer;
+}
+.app_healthLabels{
+  margin: 0 10px;
+  min-width: 20%;
+  border-radius:50px;
+  padding: 10px;
+  background: rgba(255, 255, 255, 0.3);
+}
+.dropcontent{
+  background: rgba(255,255,255,0.5);
 }
 
 @media(max-width:700px){
-  .fh1{
-   display: none;
-  }
   .appname{
     width: 100%;
     color:rgba(212, 212, 212, 0.664);
     transition: 1s;
     box-shadow: 0px 5px 5px black;
     display: block;
-    padding:5px;
-    font-size: 30px;
-    background: rgba(1, 132, 255, 0.6);
-
+    margin: 0 auto;
+    padding:3px 0;
+    font-size: 10px;
+    background: rgba(68, 122, 172, 0.733);
+    backdrop-filter: blur(10px);
+    cursor: pointer;
   }
  
 .header{
-  top: 0;
   width: 100%;
-  position: fixed;
+  position: sticky top;
+  top: 0;
+  padding:0 ;
+  max-height: 20px;
   z-index: 100;
-  height: 0;
 }
   .search-form{
     min-height: 0;
-    width: 100%;
-    margin: 15% auto;
+    width: 90%;
+    margin: 25% auto;
     position: relative;
     display: flex;
     justify-content: center;
@@ -131,7 +135,7 @@ a{
     z-index: 1;
   }
   .search-bar{
-    width: 60%;
+    width: 70%;
     border: none;
     padding: 7px;
     transition: 0.4s;
@@ -146,9 +150,17 @@ a{
     font-size: 25px;
     color:white;
     transition: 0.5s;
-    margin-left: 5px;
+    margin-left: 0;
+    position: relative;
     transition: 0.3s;
     transform: scale(1);
+  }
+  .app_healthLabels{
+    margin: 0 3px;
+    max-width: 10px;
+    border-radius:50px;
+    padding: 5px 0;
+    background: rgba(255, 255, 255, 0.3);
   }
   .recipes{
     display: flex;
@@ -157,5 +169,23 @@ a{
     flex-wrap: wrap;
     font-size: 20px;
     margin-top: 0 auto;
+  }
+}
+
+
+@media(max-width:1400px){
+  .appname{
+    width: 100%;
+    color:rgba(212, 212, 212, 0.664);
+    transition: 1s;
+    box-shadow: 0px 5px 5px black;
+    display: block;
+    margin: 0 auto;
+    padding:10px 0;
+    font-size: 50px;
+    background: rgba(68, 122, 172, 0.733);
+    backdrop-filter: blur(10px);
+    cursor: pointer;
+    text-align: left;
   }
 }
