--- a/src/recipe.module.css
+++ b/src/recipe.module.css
@@ -7,54 +7,82 @@
     justify-content: space-around;
     background: linear-gradient(rgba(255, 255, 255, 0.548),rgba(255, 255, 255, 0.178));
     align-items: center;
-    min-width: 35%;
+    min-width: 60%;
     transition: 0.3s;
     transform: scale(1);
     cursor: pointer;
     padding: 5px 5px;
+    overflow: hidden;
+    width: auto;
 }
 .recipe:hover{
     box-shadow: 0px 0px 30px 20px rgba(0, 0, 0, 0.2);
-    transform: scale(1.03);
+    transform: scale(1);
     background: linear-gradient(rgba(255, 255, 255, 0.829),rgba(255, 255, 255, 0.418));
-  }
+    width: fit-content;
+}
+  
 .image{
     border-radius: 50%;
     width: 200px;
     height: 200px;
     border: 5px solid rgba(0, 0, 0, 0.315);
 }
+p{
+    position: relative;
+    width: 95%;
+
+}
+a{
+   color: white;
+
+}
+button{
+    background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.7));
+    padding: 10px 20px;
+    color: white;
+    border-radius: 30px;
+    border: none;
+    outline: none;
+    transition: 0.6s;
+}
+button:hover{
+    background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.9));
+
+}
+
 @media(max-width:700px){
     .recipe{
         border-radius: 10px;
         box-shadow: 0px 5px 20px rgba(5, 5, 5, 0.637);
-        margin: 25px;
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        background: linear-gradient(rgba(255, 255, 255, 0.7),rgba(255, 255, 255, 0.3));
+        flex-direction:column;
+        justify-content: center;
+        background: linear-gradient(rgba(255, 255, 255, 0.6),rgba(255, 255, 255, 0.5));
         align-items: center;
-        min-width: 45%;
+        max-width: 90%;
         transition: 0.3s;
         transform: scale(1);
         cursor: pointer;
-        padding: 1px 5px;
-        margin: 10px 60px ;
+        padding: 5px 5px;
+        margin:10px auto;
         z-index: 99;
     }
     .recipe:hover{
         box-shadow: 0px 0px 30px 20px rgba(0, 0, 0, 0.2);
         transform: scale(1);
-        background: linear-gradient(rgba(255, 255, 255, 0.85),rgba(255, 255, 255, 0.5));
+        background: linear-gradient(rgba(255, 255, 255, 0.85),rgba(255, 255, 255, 0.7));
       }
       h1{
           font-size: 23px;
       }
       h3{
           font-size: 20px;
+          text-align: left;
       }
       li{
           font-size: 17px;
+          text-align: left;
       }
       p{
           font-size: 17px;
