--- a/src/recipe.module.css
+++ b/src/recipe.module.css
@@ -12,6 +12,7 @@
     cursor: pointer;
     padding: 5px 5px;
     overflow: hidden;
+   
 }
 .recipe:hover{
     box-shadow: 0px 0px 30px 20px rgba(0, 0, 0, 0.2);
@@ -26,12 +27,18 @@
 }
 p{
     position: relative;
-    width: 95%;
+    width: 100%;
+    line-height:7px;
 
 }
 a{
    color: white;
 
+}
+.details{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 1;
 }
 button{
     background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.7));
@@ -45,6 +52,13 @@ button{
 button:hover{
     background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.9));
 
+}
+.health p{
+    line-height: 30px;
+    padding: 50px;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 @media(max-width:700px){
@@ -60,7 +74,7 @@ button:hover{
         transition: 0.3s;
         cursor: pointer;
         padding: 5px 5px;
-        margin:10px auto;
+        margin:20px auto;
         z-index: 99;
     }
     .recipe:hover{
@@ -84,10 +98,12 @@ button:hover{
           text-align: left;
       }
     .image{
-        border-radius: 50%;
-        width: 70px;
-        height: 70px;
+        border-radius: 5px;
+        width: 100px;
+        height: 100px;
+        background-size: contain;
         margin: 0;
+        object-fit: cover;
         border: 2px solid rgba(0, 0, 0, 0.315);
 
     }
