--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;1,300&family=Poppins:ital,wght@1,100&display=swap');
+
 ::-webkit-scrollbar{
-  display: none;
-
+display: none;
 }
-
-
 .App{
-  font-family: 'Courgette', cursive;
-   min-height: 100vh;
+  font-family: 'Josefin Sans', sans-serif;
+     min-height: 100vh;
   max-width: 100%;
   background-image: radial-gradient(circle 500px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);  overflow-x: hidden;
   scroll-behavior: smooth;
@@ -20,12 +18,11 @@
   box-shadow: 0px 5px 5px black;
   display: block;
   margin: 0 auto;
-
+  padding: 15px;
   font-size: 50px;
   background: rgba(68, 51, 168, 0.74);
   backdrop-filter: blur(10px);
   cursor: pointer;
-  padding-left: 20px;
 }
 .appname:hover{
   color: rgba(255,255,255,1);
@@ -43,6 +40,7 @@ a{
   position: fixed;
   z-index: 100;
   height: 0;
+  margin: auto;
 }
 
 
@@ -118,17 +116,13 @@ a{
     color:rgba(212, 212, 212, 0.664);
     transition: 1s;
     box-shadow: 0px 5px 5px black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 20px;
-    font-size: 30px !important;
+    display: block;
+    margin: 0 auto;
+    padding: 15px;
+    font-size: 25px;
     background: rgba(68, 51, 168, 0.74);
     backdrop-filter: blur(10px);
     cursor: pointer;
-    text-align: center;
-  
  
   }
 .header{
@@ -186,7 +180,7 @@ display: none;
     height: 50px;
     flex-wrap: wrap;
     font-size: 20px;
-    margin-top: 0 auto;
+    margin: 0 auto;
   }
 }
 
