--- a/src/recipe.module.css
+++ b/src/recipe.module.css
@@ -15,7 +15,7 @@
    
 }
 .recipe:hover{
-    box-shadow: 0px 0px 30px 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.2);
     background: linear-gradient(rgba(255, 255, 255, 0.829),rgba(255, 255, 255, 0.418));
 }
   
@@ -30,6 +30,9 @@ p{
     width: 100%;
     line-height:7px;
 
+}
+li{
+    line-height: 25px;
 }
 a{
    color: white;
